update min-height to avoid y-overflow

--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ body {
 
 .container {
   width: 100%;
-  min-height: calc(100vh - 44px);
+  min-height: calc(100vh - 74px);
   padding: 16px;
   background-image: url(./images/pattern-background-desktop.svg);
   background-repeat: no-repeat;
